--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ h1 {
 }
 
 textarea {
-	position: relative;
-	top: 20%;
+	position: absolute;
+	top: 40%;
 	height: 10%;
 	left: 30%;
 	right: 30%;
