--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	text-align: center;
+	background: url('https://images.unsplash.com/photo-1461958508236-9a742665a0d5?auto=format&fit=crop&w=1950&q=80');
 }
 
 content {
@@ -11,7 +12,7 @@ content {
 	right: 20%;
 	width: 60%;
 	background-color: rgba(0,26,52,0.5);
-	border: solid;
+	border: solid white;
 	border-radius: 20px;
 }
 
@@ -26,7 +27,7 @@ h1 {
 #guess {
 	font-size: 36px;
 	height: 10%;
-	margin: 0 auto;
+	margin: 0 auto 1em;
 	border: solid;
 	border-radius: 15px;
 	padding: 20px;
@@ -45,9 +46,16 @@ h1 {
 
 #hint {
 	font-size: 60px;
-	position: absolute;
 	top: 40%;
 	left: 10%;
 	right: 10%;
 	width: 80%;
+}
+
+#words {
+	font-size: 36px;
+	position: absolute;
+	bottom: 10%;
+	width: 80%;
+	background: rgba(255, 255, 255, 0.5);
 }
