--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ h1 {
 	border: solid;
 	border-radius: 15px;
 	padding: 20px;
+	text-transform: uppercase;
+	background: rgba(255, 255, 255, 0.8);
 }
 
 #words {
@@ -42,20 +44,29 @@ h1 {
 	bottom: 10%;
 	height: 35%;
 	border-radius: 15px;
+	text-transform: uppercase;
+	padding: 0.5em;
+	text-align: center;
 }
 
 #hint {
 	font-size: 60px;
-	top: 40%;
+	position: absolute;
+	top: 50%;
 	left: 10%;
 	right: 10%;
 	width: 80%;
+	margin: 0 auto;
+	text-transform: uppercase;
+	background: rgba(255, 255, 255, 1);
 }
 
 #words {
-	font-size: 36px;
+	font-size: 24px;
 	position: absolute;
 	bottom: 10%;
 	width: 80%;
-	background: rgba(255, 255, 255, 0.5);
+	height: 25%;
+	text-transform: uppercase;
+	background: rgba(255, 255, 255, 0.8);
 }
