--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
 	text-align: center;
 	background: url('https://images.unsplash.com/photo-1461958508236-9a742665a0d5?auto=format&fit=crop&w=1950&q=80');
+	/*background-repeat: no-repeat;*/
+	background-size: cover;
 }
 
 content {
@@ -31,6 +33,7 @@ h1 {
 	border: solid;
 	border-radius: 15px;
 	padding: 20px;
+	width: 80%;
 	text-transform: uppercase;
 	background: rgba(255, 255, 255, 0.8);
 }
