--- a/style.css
+++ b/style.css
@@ -36,14 +36,12 @@ h1 {
 	width: 80%;
 	font-size: 36px;
 	margin: 0 auto;
+	padding: 20px;
 	border: solid;
 	border-radius: 15px;
-	padding: 20px;
-	width: 80%;
 	text-transform: uppercase;
 	background: rgba(255, 255, 255, 0.8);
 	color: transparent;
-  	/*text-shadow: 0 0 0 #2196f3;*/
   	text-shadow: 0 0 0 #000000;
 	&:focus {
       outline: none;
@@ -51,17 +49,18 @@ h1 {
 }
 
 #words {
-	font-size: 36px;
+	font-size: 24px;
 	position: absolute;
 	left: 10%;
 	right: 10%;
 	width: 80%;
 	bottom: 10%;
-	height: 35%;
+	height: 25%;
 	border-radius: 15px;
-	text-transform: uppercase;
 	padding: 0.5em;
 	text-align: center;
+	text-transform: uppercase;
+	background: rgba(255, 255, 255, 0.8);
 }
 
 #twisted {
@@ -72,16 +71,15 @@ h1 {
 	right: 10%;
 	width: 80%;
 	margin: 0 auto;
+	border-radius: 15px;
 	text-transform: uppercase;
 	background: rgba(255, 255, 255, 1);
 }
 
-#words {
-	font-size: 24px;
+#buttonRow {
 	position: absolute;
-	bottom: 10%;
+	top: 40%;
+	left: 10%;
+	right: 10%;
 	width: 80%;
-	height: 25%;
-	text-transform: uppercase;
-	background: rgba(255, 255, 255, 0.8);
 }
