--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ h1 {
 	background: rgba(255, 255, 255, 0.8);
 }
 
+#words a {
+	color: white;
+	background: black;
+}
+
 #twisted {
 	font-size: 60px;
 	position: absolute;
@@ -82,4 +87,8 @@ h1 {
 	left: 10%;
 	right: 10%;
 	width: 80%;
+}
+
+#buttonRow button {
+	margin: 0 0.25em;
 }
